--- a/classes/drawing.bitmapdatalayout.html
+++ b/classes/drawing.bitmapdatalayout.html
@@ -72,6 +72,11 @@
 					<div class="lead">
 						<p>Determines the type and format of data that is stored in the image buffer.</p>
 					</div>
+					<dl class="tsd-comment-tags">
+						<dt>version</dt>
+						<dd><p>1.1</p>
+						</dd>
+					</dl>
 				</div>
 			</section>
 			<section class="tsd-panel tsd-hierarchy">
@@ -131,7 +136,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in drawing/image/bitmap.ts:117</li>
+									<li>Defined in drawing/image/bitmap.ts:118</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -173,7 +178,7 @@
 					<div class="tsd-signature tsd-kind-icon">dpiX<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in drawing/image/bitmap.ts:113</li>
+							<li>Defined in drawing/image/bitmap.ts:114</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -188,7 +193,7 @@
 					<div class="tsd-signature tsd-kind-icon">dpiY<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in drawing/image/bitmap.ts:117</li>
+							<li>Defined in drawing/image/bitmap.ts:118</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -203,7 +208,7 @@
 					<div class="tsd-signature tsd-kind-icon">pixel<wbr>Format<span class="tsd-signature-symbol">:</span> <a href="../modules/drawing.html#pixelformat" class="tsd-signature-type">PixelFormat</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in drawing/image/bitmap.ts:92</li>
+							<li>Defined in drawing/image/bitmap.ts:93</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -218,7 +223,7 @@
 					<div class="tsd-signature tsd-kind-icon">pixel<wbr>Height<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in drawing/image/bitmap.ts:102</li>
+							<li>Defined in drawing/image/bitmap.ts:103</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -233,7 +238,7 @@
 					<div class="tsd-signature tsd-kind-icon">pixel<wbr>Width<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in drawing/image/bitmap.ts:97</li>
+							<li>Defined in drawing/image/bitmap.ts:98</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -248,7 +253,7 @@
 					<div class="tsd-signature tsd-kind-icon">stride<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in drawing/image/bitmap.ts:108</li>
+							<li>Defined in drawing/image/bitmap.ts:109</li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -271,7 +276,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in drawing/image/bitmap.ts:149</li>
+									<li>Defined in drawing/image/bitmap.ts:157</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -296,7 +301,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in drawing/image/bitmap.ts:135</li>
+									<li>Defined in drawing/image/bitmap.ts:143</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
