--- a/classes/data.limitcollection.html
+++ b/classes/data.limitcollection.html
@@ -67,6 +67,14 @@
 <div class="container container-main">
 	<div class="row">
 		<div class="col-8 col-content">
+			<section class="tsd-panel tsd-comment">
+				<div class="tsd-comment tsd-typography">
+					<div class="lead">
+						<p>Describes a set of limits that is applicable to a characteristic. You can retrieve it by accessing the
+						property <a href="data.inspectionplanitem.html#limits">limits</a> on an <a href="data.inspectionplanitem.html">InspectionPlanItem</a>.</p>
+					</div>
+				</div>
+			</section>
 			<section class="tsd-panel tsd-hierarchy">
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
@@ -79,10 +87,10 @@
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
-						<section class="tsd-index-section ">
+						<section class="tsd-index-section tsd-is-private tsd-is-private-protected">
 							<h3>Constructors</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-constructor tsd-parent-kind-class"><a href="data.limitcollection.html#constructor" class="tsd-kind-icon">constructor</a></li>
+								<li class="tsd-kind-constructor tsd-parent-kind-class tsd-is-private"><a href="data.limitcollection.html#constructor" class="tsd-kind-icon">constructor</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section ">
@@ -103,21 +111,23 @@
 					</div>
 				</section>
 			</section>
-			<section class="tsd-panel-group tsd-member-group ">
+			<section class="tsd-panel-group tsd-member-group tsd-is-private tsd-is-private-protected">
 				<h2>Constructors</h2>
-				<section class="tsd-panel tsd-member tsd-kind-constructor tsd-parent-kind-class">
+				<section class="tsd-panel tsd-member tsd-kind-constructor tsd-parent-kind-class tsd-is-private">
 					<a name="constructor" class="tsd-anchor"></a>
-					<h3>constructor</h3>
-					<ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-class">
+					<h3><span class="tsd-flag ts-flagPrivate">Private</span> constructor</h3>
+					<ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-class tsd-is-private">
 						<li class="tsd-signature tsd-kind-icon">new <wbr>Limit<wbr>Collection<span class="tsd-signature-symbol">(</span>tolerance<span class="tsd-signature-symbol">: </span><a href="data.limitcontext.html" class="tsd-signature-type">LimitContext</a>, warning<span class="tsd-signature-symbol">: </span><a href="data.limitcontext.html" class="tsd-signature-type">LimitContext</a>, control<span class="tsd-signature-symbol">: </span><a href="data.limitcontext.html" class="tsd-signature-type">LimitContext</a>, scrap<span class="tsd-signature-symbol">: </span><a href="data.limitcontext.html" class="tsd-signature-type">LimitContext</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="data.limitcollection.html" class="tsd-signature-type">LimitCollection</a></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in data/inspection.ts:396</li>
+									<li>Defined in data/inspection.ts:411</li>
 								</ul>
 							</aside>
+							<div class="tsd-comment tsd-typography">
+							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
@@ -146,9 +156,14 @@
 					<div class="tsd-signature tsd-kind-icon">control<span class="tsd-signature-symbol">:</span> <a href="data.limitcontext.html" class="tsd-signature-type">LimitContext</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in data/inspection.ts:395</li>
+							<li>Defined in data/inspection.ts:406</li>
 						</ul>
 					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>The control limits, usually defined by attributes K8012 and K8013.</p>
+						</div>
+					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
 					<a name="scrap" class="tsd-anchor"></a>
@@ -156,9 +171,14 @@
 					<div class="tsd-signature tsd-kind-icon">scrap<span class="tsd-signature-symbol">:</span> <a href="data.limitcontext.html" class="tsd-signature-type">LimitContext</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in data/inspection.ts:396</li>
+							<li>Defined in data/inspection.ts:411</li>
 						</ul>
 					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>The scrap limits, usually defined by attributes K2114 and K2115.</p>
+						</div>
+					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
 					<a name="tolerance" class="tsd-anchor"></a>
@@ -166,9 +186,14 @@
 					<div class="tsd-signature tsd-kind-icon">tolerance<span class="tsd-signature-symbol">:</span> <a href="data.limitcontext.html" class="tsd-signature-type">LimitContext</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in data/inspection.ts:393</li>
+							<li>Defined in data/inspection.ts:396</li>
 						</ul>
 					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>The tolerance limits, usually defined by attributes K2111 and K2112.</p>
+						</div>
+					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
 					<a name="warning" class="tsd-anchor"></a>
@@ -176,9 +201,14 @@
 					<div class="tsd-signature tsd-kind-icon">warning<span class="tsd-signature-symbol">:</span> <a href="data.limitcontext.html" class="tsd-signature-type">LimitContext</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in data/inspection.ts:394</li>
+							<li>Defined in data/inspection.ts:401</li>
 						</ul>
 					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>The warning limits, usually defined by attributes K8014 and K8015.</p>
+						</div>
+					</div>
 				</section>
 			</section>
 			<section class="tsd-panel-group tsd-member-group ">
@@ -193,13 +223,20 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in data/inspection.ts:405</li>
+									<li>Defined in data/inspection.ts:427</li>
 								</ul>
 							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Returns the <a href="data.limitcontext.html">LimitContext</a> with the specified limit type.</p>
+								</div>
+							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
 									<h5>type: <a href="../modules/environment.html#limittype" class="tsd-signature-type">LimitType</a></h5>
+									<div class="tsd-comment tsd-typography">
+									</div>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <a href="data.limitcontext.html" class="tsd-signature-type">LimitContext</a></h4>
@@ -267,7 +304,7 @@
 					<li class="current tsd-kind-class tsd-parent-kind-external-module">
 						<a href="data.limitcollection.html" class="tsd-kind-icon">Limit<wbr>Collection</a>
 						<ul>
-							<li class=" tsd-kind-constructor tsd-parent-kind-class">
+							<li class=" tsd-kind-constructor tsd-parent-kind-class tsd-is-private">
 								<a href="data.limitcollection.html#constructor" class="tsd-kind-icon">constructor</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-class">
